--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -14,22 +14,16 @@
     <script src="{% static "js/app.js" %}"></script>
   </head>
 
-  <body>
-
-        <div class="row">
+  <body >
+        <div class="row" >
 
             <div class="large-12 column">
-                <img src="{% static 'img/logos.png' %}" id="logotipoDIF">
+
                 <div class="row first-paddin">
                     <br>
-                    <h3 class="subheader text-center" id="encabezado">SISTEMA INTEGRAL PARA EL DESARROLLO DE LA FAMILIA</h3>
+                    <h3  class="text-center"   id="encabezado">Blog</h3>
                     <hr> <!--LINEA DIVISIORA-->
                 </div>
-            </div>
-
-            <div class="large-12 column" id="sep">
-                <h5 class="subheader text-center">SISTEMA DE CONTROL DE INVENTARIOS</h5>
-                <h6 class="subheader text-center">RESIDENCIA DEL ANCIANO "CASA DEL ÁRBOL"</h6>
             </div>
         </div>
 
