--- a/mysite/templates/templates/menu.html
+++ b/mysite/templates/templates/menu.html
@@ -4,10 +4,10 @@
         <div class="top-bar">
             <div class="top-bar-left">
                 <ul class="menu">
-                    <li class="menu-text"  >MENU</li>
-                    <li><a href="{% url 'persona-welcome' %}"><i class="fi-home"></i>Home</a></li>
-                    <li><a href="{% url 'persona-list' %}"><i class="fi-torsos-all-female"></i>Personas</a></li>
-                    <li><a href="{% url 'logout' %}"><i class="fi-power"></i>Salir</a></li>
+                    <li><i class="fi-thumbnails"></i></li>
+                    <li><a href="{% url 'blog-list' %}"><i class="fi-home"></i>Home</a></li>
+                    <li><a href="{% url 'login' %}"><i class="fi-torsos-all-female"></i>Iniciar sesion</a></li>
+                    <li><a href="{% url 'user-add' %}"><i class="fi-plus"></i>Registrarse</a></li>
                 </ul>
             </div>
 
