--- a/mysite/templates/login.html
+++ b/mysite/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block contenido %}
-
+    {% include 'templates/menu.html' %}
      <div class="row"  id="sep" >
         <h4 class="subheader text-center">Iniciar sesion</h4>
         <form id="formulario" method="post" >
