--- a/mysite/templates/catalogo/myform.html
+++ b/mysite/templates/catalogo/myform.html
@@ -2,11 +2,12 @@
 
 {% block contenido %}
     {% include 'login/menu.html' %}
-
+<div class="row">
 <form action="" method="POST">{% csrf_token %}
   {{form.as_p}}
   <button type="submit" class="button success" name="Enviar">Enviar</button>
   <!--<input type="submit" class="button success" name="Enviar">-->
 </form>
+    </div>
 
 {% endblock %}
